<resources>
    <string name="app_name" translatable="false">Codeforces WatchR</string>
    <string name="rank">Rank: %1$s</string>
    <string name="name">Name: %1$s</string>
    <string name="cur_rating">Current Rating: %1$s</string>
    <string name="max_rating">Max Rating: %1$s</string>
    <string name="last_rating_update">Last rating update: %1$s</string>
    <string name="no_rating_update">No rating update</string>
    <string name="none">None</string>
    <string name="no_connection">No connection</string>
    <string name="rating_changes">Rating Changes</string>
    <string name="ratings_have_been_updated">Ratings have been updated</string>
    <string name="ratings_update">Rating updates</string>
    <string name="user_already_added">User already added</string>
    <string name="failed_to_fetch_users">Failed to fetch user(s)! Wait or check handle(s)…</string>
    <string name="sort_by">Sort by</string>
    <string name="by_default">default</string>
    <string name="by_descending_rating">↓ rating</string>
    <string name="by_ascending_rating">↑ rating</string>
    <string name="by_descending_update">↓ update</string>
    <string name="by_ascending_update">↑ update</string>
    <string name="add">Add</string>
    <string name="enter_handle">Enter handle</string>

    <string name="like_codeforces_watcher">Do you like Codeforces WatchR?</string>
    <string name="rate_it_on_gp">Rate it on Google Play!</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="no_thank_you">No, Thank You</string>
    <string name="yes_very">Yes!</string>

    <string name="google_play_not_found">Google Play not found</string>

    <string name="users">Users</string>
    <string name="contests">Contests</string>
    <string name="actions">Actions</string>
    <string name="problems">Problems</string>

    <string name="empty" translatable="false" />
    <string name="google_calendar_not_found">Sorry, but no Google Calendar found on this device</string>
    <string name="commented_by">"Commented by %1$s"</string>
    <string name="feature_isn_t_available_yet">This feature isn’t available yet.</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="shared_through_cw">Shared through Codeforces WatchR. Find it on Google Play.</string>
    <string name="no_users">You don’t have any users to watch yet.\nAdd the first one using «+» at the bottom of the screen.</string>
    <string name="no_favourite_problems">You don’t have any favourite problems yet.\nAdd the first one using «∞» at the bottom of the screen.</string>

    <string name="share_cw">Share Codeforces WatchR</string>
    <string name="help_cw_make_more_social">Help us make Codeforces and Codeforces WatchR more social by sharing it with your friends.</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="share_cw_message">"I'm using Codeforces WatchR - open-source, free Android application, which leverages Codeforces API to bring more competitive programming to your Android device.
Codeforces WatchR allows:

1. Shortlist and register for upcoming Competitive Programming contests: Codeforces, LeetCode, HackerEarth, AtCoder, TopCoder, CS Academy, CodeChef, Kick Start.
2. Follow Recent Actions.
3. Browse and search for Problems, add them to favourites.
4. Watch for activity of any Codeforces user
5. Sort users by rating and last participation date.

Download it now on Google Play - https://play.google.com/store/apps/details?id=com.bogdan.codeforceswatcher"</string>
    <string name="actions_on_the_way">Recent actions on the way to your device…</string>
    <string name="problems_on_the_way">Problems on the way to your device…</string>
    <string name="created_or_updated_text">Created or updated the text, click to see details…</string>
    <string name="problem_name_with_index" translatable="false">%1$d%2$s: %3$s</string>
    <string name="search_for_problems">Search for problems…</string>
    <string name="no_browser_has_been_found">No browser has been found, try to install one.</string>
    <string name="filters">Filters</string>
    <string name="no_contests_found">No contests found</string>
    <string name="click_to_see_details">Click to see details</string>

    <string name="yes">YES!</string>
    <string name="rate_us_first_title">Enjoying our Codeforces WatchR App?</string>
    <string name="rate_us_second_title">Would you mind giving us some feedback?</string>
    <string name="rate_us_third_title">How about a rating on Google Play, then?</string>
    <string name="not_really">Not really</string>
    <string name="no_thanks">No, thanks</string>

    <string name="chart_info">" = %1$s (%2$s) \n Place: %3$s \n %4$s \n %5$s "</string>
    <string name="contest_date_format">HH:mm MMM d, EEEE</string>
    <string name="user_date_format">MMM d, yyyy</string>
</resources>