<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff"
    android:orientation="vertical">

    <TextView
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:text="@string/like_codeforces_watcher" />

    <TextView
        style="@style/TextSubheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/rate_it_on_gp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnYes"
            style="@style/TextBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#ffffffff"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/yes_very" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_grey" />

        <Button
            android:id="@+id/btnMaybe"
            style="@style/TextBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#ffffffff"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/maybe_later" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_grey" />

        <Button
            android:id="@+id/btnNo"
            style="@style/TextBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#ffffffff"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/no_thank_you" />

    </LinearLayout>

</LinearLayout>