<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingBottom="0dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/ivCrossFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_close" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="12dp"
                android:textSize="18sp"
                android:textAlignment="center"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                tools:text="@string/rate_us_first_title" />

            <Button
                android:id="@+id/btnNegative"
                android:layout_width="128dp"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_blue_border_with_ripple"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                card_view:layout_constraintEnd_toStartOf="@id/btnPositive"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:text="@string/not_really" />

            <Button
                android:id="@+id/btnPositive"
                android:layout_width="128dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/blue_button_with_ripple"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/btnNegative"
                card_view:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:text="@string/yes" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>